spec/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: sidecar
  template:
    metadata:
      labels:
        name: sidecar
    spec:
      containers:
        - name: nginx
          image: nginx:1.21.4
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: nginx.conf

---
apiVersion: v1
kind: Service
metadata:
  name: sidecar-entrypoint
spec:
  selector:
    name: sidecar
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: kibana
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: es
  type: NodePort
