spec/transform.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transform
  namespace: default
spec:
  replicas: 1

  selector:
    matchLabels:
      name: transform
  template:
    metadata:
      labels:
        name: transform
    spec:
      containers:
        - name: transform
          image: zhaoyi0113/es-kinesis-firehose-transform
          resources:
            requests:
              cpu: 1
              memory: 2Gi
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: transform
spec:
  selector:
    name: transform
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
